--- a/resources/assets/sass/2-layouts/_top-brands.scss
+++ b/resources/assets/sass/2-layouts/_top-brands.scss
@@ -1,6 +1,6 @@
 .top-brands{
     width:100%;
-    padding:1% 10%;
+    padding:0 10% 1%;
     box-sizing:border-box;
     background:white;
     text-align:left;
