--- a/resources/assets/sass/2-layouts/_full-banner.scss
+++ b/resources/assets/sass/2-layouts/_full-banner.scss
@@ -16,17 +16,31 @@
     height:370px;
     margin:2% 0;
 }
-@media all and (max-width:1000px){
+@media (min-width: 320px) {
     .full-banner1,.full-banner2{
-        padding:0 3%;
-        h5.title{
-            font-size:20px !important;
+        padding:0;
+        margin-bottom:5%;
+        img{
+            height:100px;
         }
     }
 }
-@media all and (max-width:700px){
-    .full-banner1,
-    .full-banner2{
-        display: none;
+@media (min-width: 800px) {
+    .full-banner1,.full-banner2{
+        margin-bottom:5%;
+        img{
+            height:100%;
+        }
+        height:150px;
+    }
+}
+@media (min-width: 1500px) {
+    .full-banner1,.full-banner2{
+        height:200px;
+    }
+}
+@media (min-width: 2000px) {
+    .full-banner1,.full-banner2{
+        height:250px;
     }
 }
