--- a/resources/assets/sass/2-layouts/_price-rating-comments.scss
+++ b/resources/assets/sass/2-layouts/_price-rating-comments.scss
@@ -110,18 +110,24 @@
     }
 }
 .rate{
-    width:100%;
+    width:95%;
     @include displayFlex(space-between, row, center);
-    .commet{
-        width:18%;
+    color:white;
+    .comment{
+        width:auto;
+        display:flex;
+        align-items: center;
         i{
-            font-size:22px;
+            margin-right:5px;
         }
         span{
             font-size:20px;
             color:$comment_color;
         }
     }
+}
+.jq-ry-container > .jq-ry-group-wrapper > .jq-ry-group > svg{
+    width:17px;
 }
 .rating {
     float:left;
@@ -230,8 +236,6 @@
         }
     }
 }
-@media all and (max-width:1000px){
-}
 @media all and (max-width:800px){
     .rating:not(:checked) > label {
         font-size: 190%;
@@ -247,7 +251,4 @@
     .comment{
         font-size:18px;
     }
-}
-@media all and (max-width:600px){
-
 }
