--- a/resources/assets/sass/_base.scss
+++ b/resources/assets/sass/_base.scss
@@ -209,7 +209,7 @@ button.owl-prev, .owl-carousel .owl-nav button.owl-prev{
     height:40px;
     border-radius:23px;
     left:0%;
-    top:35%;
+    top:40%;
     outline: none;
     &:hover{
         background:#668eff;
@@ -225,7 +225,7 @@ button.owl-next, .owl-carousel .owl-nav button.owl-next{
     height:40px;
     border-radius:23px;
     right:0%;
-    top:35%;
+    top:40%;
     outline: none;
     &:hover{
         background:#668eff;
@@ -261,12 +261,12 @@ button.owl-next span{
 }
 .outter-products{
     width:100%;
-    height:610px;
+    height:570px;
     background:white;
     position:relative;
     .similar-p,.products{
         width:80%;
-        height:610px;
+        height:595px;
         margin:0 auto;
         position:absolute;
         left:10%;
@@ -1248,7 +1248,7 @@ form#search-bar.search-bar{
         }
     }
     .h4-title{
-        padding:3% 8%;
+        // padding:3% 8%;
         &.video-blog, &.catalog-view, &.pay-body,
          &.sales-body, &.recently-viewed, &.brands-alphabet, &.shops-body,
          &.u-will-also-like, &.other-products-of-this-seller, &.similar-products,
@@ -1328,11 +1328,6 @@ form#search-bar.search-bar{
 }
 
 @media all and (max-width:1150px){
-    .outter-products{
-        .products{
-            top:-2%;
-        }
-    }
     p.sub-title.bottom{
         font-size:15px;
     }
@@ -1371,17 +1366,17 @@ form#search-bar.search-bar{
     }
 }
 @media all and (max-width:1065px){
-    .outter-products{
-        .products, .all-filtered-items{
-            .item{
-                .product-img{
-                    img{
-                        width:100%;
-                    }
-                }
-            }
-        }
-    }
+    // .outter-products{
+    //     .products, .all-filtered-items{
+    //         .item{
+    //             .product-img{
+    //                 img{
+    //                     width:100%;
+    //                 }
+    //             }
+    //         }
+    //     }
+    // }
 }
 @media all and (max-width:1000px){
     .outter-list-of-shops {
@@ -1393,18 +1388,18 @@ form#search-bar.search-bar{
             }
         }
     }
-    .outter-products{
-        .products, .all-filtered-items{
-            .item{
-                .product-img{
-                    img{
-                        width:80%;
-                        margin:0 auto;
-                    }
-                }
-            }
-        }
-    }
+    // .outter-products{
+    //     .products, .all-filtered-items{
+    //         .item{
+    //             .product-img{
+    //                 img{
+    //                     width:80%;
+    //                     margin:0 auto;
+    //                 }
+    //             }
+    //         }
+    //     }
+    // }
     .h4-title{
         padding:2.5% 5%;
         &.video-blog, &.catalog-view, &.pay-body,
@@ -1443,17 +1438,17 @@ form#search-bar.search-bar{
             }
         }
     }
-    .outter-products{
-        .products, .all-filtered-items{
-            .item{
-                .product-img{
-                    img{
-                        width: auto;
-                    }
-                }
-            }
-        }
-    }
+    // .outter-products{
+    //     .products, .all-filtered-items{
+    //         .item{
+    //             .product-img{
+    //                 img{
+    //                     width: auto;
+    //                 }
+    //             }
+    //         }
+    //     }
+    // }
 }
 @media all and (max-width:600px){
     h5.price, h6.old-price{
@@ -1644,18 +1639,6 @@ form#search-bar.search-bar{
     }
 }
 @media all and (max-width:400px){
-    .outter-products{
-        height:510px;
-        .products, .all-filtered-items{
-            height:510px;
-            .item{
-                height:500px;
-            }
-        }
-    }
-    .carousel-products{
-        height:565px !important;
-    }
     h4.title{
         font-size:22px;
     }
