--- a/resources/assets/sass/2-layouts/_mmenu.scss
+++ b/resources/assets/sass/2-layouts/_mmenu.scss
@@ -210,7 +210,7 @@ nav#menu{
     .mm-btn_close{
         width:50px;
         height:65px;
-        position: absolute;
+        position: fixed;
         top: 0;
         right: 5px;
         z-index: 2;
