--- a/resources/assets/sass/2-layouts/_nav-header.scss
+++ b/resources/assets/sass/2-layouts/_nav-header.scss
@@ -179,6 +179,8 @@ nav#main_navbar{
         left:100%;
         width:320px;
         height:100%;
+        box-shadow: 0px 2px 7px -5px black;
+        z-index: 10000;
         img{
           width:100%;
           height:100%;
@@ -195,6 +197,7 @@ nav#main_navbar{
         column-gap: 0;
         background-color: transparent;
         padding: 10px;
+        box-shadow: 0px 2px 7px -5px black;
         .all-brands {
             background-color: #fff;
             padding: 5px 0;
@@ -204,10 +207,19 @@ nav#main_navbar{
                 font-size: 16px;
             }
         }
-        img{
-          width:100%;
-          height:20%;
-          padding: 5px 0;
+        a {
+            width:100%;
+            height:20%;
+            padding: 5px 0;
+            img{
+                width:100%;
+                height:20%;
+                padding: 5px 0;
+            }
+        }
+
+        &:hover {
+            display: block;
         }
       }
       .dropdown{
