--- a/resources/assets/sass/2-layouts/_nav-header.scss
+++ b/resources/assets/sass/2-layouts/_nav-header.scss
@@ -181,10 +181,18 @@ nav#main_navbar{
         height:100%;
         box-shadow: 0px 2px 7px -5px black;
         z-index: 10000;
-        img{
-          width:100%;
-          height:100%;
+        background-color: #fff;
+        .full-banner {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100%;
+            img{
+                width:100%;
+                height:auto;
+            }
         }
+
       }
       li.full-image-banner2{
         position:absolute;
