--- a/public/css/fileinput.css
+++ b/public/css/fileinput.css
@@ -82,7 +82,7 @@
   background: none;
   outline: none;
   -webkit-box-shadow: none;
-          box-shadow: none;
+  box-shadow: none;
 }
 
 .file-loading:before {
@@ -93,7 +93,6 @@
   font-size: 13px;
   font-variant: small-caps;
   color: #999;
-  background: transparent url(../img/loading.gif) top left no-repeat;
 }
 
 .file-object {
@@ -128,7 +127,7 @@
   margin: 0;
   padding: 0;
   -webkit-box-shadow: none;
-          box-shadow: none;
+  box-shadow: none;
   border: none;
   background: none;
   outline: none;
@@ -199,7 +198,7 @@
   margin: 8px;
   border: 1px solid rgba(0, 0, 0, 0.2);
   -webkit-box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
-          box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
+  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
   padding: 6px;
   float: left;
   text-align: center;
@@ -221,7 +220,7 @@
 .krajee-default.file-preview-frame:not(.file-preview-error):hover {
   border: 1px solid rgba(0, 0, 0, 0.3);
   -webkit-box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.4);
-          box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.4);
+  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.4);
 }
 
 .krajee-default.file-preview-frame[data-template="audio"] .kv-file-content {
@@ -234,11 +233,11 @@
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
 }
 
 .krajee-default .file-preview-text {
@@ -278,7 +277,7 @@
 .krajee-default .file-preview-error {
   opacity: 0.65;
   -webkit-box-shadow: none;
-          box-shadow: none;
+  box-shadow: none;
 }
 
 .krajee-default .file-thumb-progress {
@@ -347,11 +346,11 @@
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
 }
 
 .file-zoom-dialog .btn-navigate {
@@ -369,7 +368,7 @@
 .file-zoom-dialog .btn-navigate:not([disabled]):hover {
   outline: none;
   -webkit-box-shadow: none;
-          box-shadow: none;
+  box-shadow: none;
   opacity: 0.6;
 }
 
@@ -413,10 +412,6 @@
   width: 100%;
 }
 
-.file-thumb-loading {
-  background: transparent url(../img/loading.gif) no-repeat scroll center center content-box !important;
-}
-
 .file-drop-zone {
   border: 1px dashed #aaa;
   border-radius: 4px;
@@ -452,7 +447,6 @@
 }
 
 .file-uploading {
-  background: url(../img/loading-sm.gif) no-repeat center bottom 10px;
   opacity: 0.65;
 }
 
@@ -464,7 +458,7 @@
 .file-zoom-fullscreen .modal-content {
   border-radius: 0;
   -webkit-box-shadow: none;
-          box-shadow: none;
+  box-shadow: none;
   min-height: 100vh;
 }
 
@@ -526,21 +520,21 @@
     display: -ms-flexbox;
     display: flex;
     -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
     -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
   }
   .file-zoom-dialog .modal-header {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
   }
 }
 
@@ -557,7 +551,6 @@
 }
 
 .file-loading[dir=rtl]:before {
-  background: transparent url(../img/loading.gif) top right no-repeat;
   padding-left: 0;
   padding-right: 20px;
 }
@@ -577,4 +570,108 @@
 
 .file-preview-initial.sortable-chosen {
   background-color: #d9edf7;
+}
+
+/*!
+   * bootstrap-fileinput v5.0.9
+   * http://plugins.krajee.com/file-input
+   *
+   * Krajee RTL (Right To Left) default styling for bootstrap-fileinput.
+   *
+   * Author: Kartik Visweswaran
+   * Copyright: 2014 - 2019, Kartik Visweswaran, Krajee.com
+   *
+   * Licensed under the BSD-3-Clause
+   * https://github.com/kartik-v/bootstrap-fileinput/blob/master/LICENSE.md
+   */
+.kv-rtl .close, .kv-rtl .krajee-default .file-actions, .kv-rtl .krajee-default .file-other-error {
+  float: left;
+}
+
+.kv-rtl .krajee-default.file-preview-frame, .kv-rtl .krajee-default .file-drag-handle, .kv-rtl .krajee-default .file-upload-indicator {
+  float: right;
+}
+
+.kv-rtl .file-zoom-dialog, .kv-rtl .file-error-message pre, .kv-rtl .file-error-message ul {
+  text-align: right;
+}
+
+.kv-rtl {
+  direction: rtl;
+}
+
+.kv-rtl .floating-buttons {
+  left: 10px;
+  right: auto;
+}
+
+.kv-rtl .floating-buttons .btn-kv {
+  margin-left: 0;
+  margin-right: 3px;
+}
+
+.kv-rtl .file-caption-icon {
+  left: auto;
+  right: 8px;
+}
+
+.kv-rtl .file-drop-zone {
+  margin: 12px 12px 12px 15px;
+}
+
+.kv-rtl .btn-prev {
+  right: 1px;
+  left: auto;
+}
+
+.kv-rtl .btn-next {
+  left: 1px;
+  right: auto;
+}
+
+.kv-rtl .pull-right, .kv-rtl .float-right {
+  float: left !important;
+}
+
+.kv-rtl .pull-left, .kv-rtl .float-left {
+  float: right !important;
+}
+
+.kv-rtl .kv-zoom-title {
+  direction: ltr;
+}
+
+.kv-rtl .krajee-default.file-preview-frame {
+  -webkit-box-shadow: -1px 1px 5px 0 #a2958a;
+  box-shadow: -1px 1px 5px 0 #a2958a;
+}
+
+.kv-rtl .krajee-default.file-preview-frame:not(.file-preview-error):hover {
+  -webkit-box-shadow: -3px 3px 5px 0 #333;
+  box-shadow: -3px 3px 5px 0 #333;
+}
+
+.kv-rtl .kv-zoom-actions .btn-kv {
+  margin-left: 0;
+  margin-right: 3px;
+}
+
+.kv-rtl .file-caption.icon-visible .file-caption-name {
+  padding-left: 0;
+  padding-right: 15px;
+}
+
+.kv-rtl .input-group-btn > .btn:last-child {
+  border-radius: 4px 0 0 4px;
+}
+
+.kv-rtl .input-group .form-control:first-child {
+  border-radius: 0 4px 4px 0;
+}
+
+.kv-rtl .btn-file input[type=file] {
+  left: auto;
+  right: 0;
+  text-align: left;
+  background: none repeat scroll 100% 0 transparent;
 }
