--- a/resources/assets/sass/_base.scss
+++ b/resources/assets/sass/_base.scss
@@ -26,6 +26,10 @@ a{
         color:$link_hover_color;
     }
 }
+.bottom{
+    position:absolute;
+    bottom:0;
+}
 .text-left{
     text-align:left;
 }
